manifests/tachidesk/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tachidesk
