manifests/tachidesk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tachidesk
  namespace: tachidesk
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tachidesk
  template:
    metadata:
      labels:
        app: tachidesk
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values: [k3s-node-1, k3s-node-2]
      containers:
      - name: tachidesk
        image: ghcr.io/suwayomi/suwayomi-server@sha256:e59f212ccf91b26de8676a063a2db90256c148c6261535c7c477d47a43d9751b # v2.3.2243
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 4567
        volumeMounts:
        - name: tachidesk-config
          mountPath: /home/suwayomi/.local/share/Tachidesk

      volumes:
      - name: tachidesk-config
        persistentVolumeClaim:
          claimName: tachidesk-config
